--- a/public/cart.html
+++ b/public/cart.html
@@ -25,6 +25,15 @@
     footer { text-align: center; padding: 15px 0; background-color: #1e1e1e; margin-top: 50px; }
     
   </style>
+
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init({
+        publicKey: "MpvXPonhsQZCp8DBc",
+      });
+    })();
+  </script>
 </head>
 <body>
 
@@ -67,6 +76,10 @@
 
   <h3>Your Games in Cart</h3>
   <div id="cartGames"></div>
+  <div class="d-flex justify-content-end mt-3">
+    <button id="checkoutBtn" class="btn btn-primary">Checkout</button>
+  </div>
+  <div id="checkoutMsg" class="mt-3"></div>
 
   <h3 class="mt-5">Played Games</h3>
 <div id="playedGames"></div>
@@ -78,16 +91,14 @@
   <p>© 2025 Atera — All rights reserved</p>
 </footer>
 
-<script>
-  const sampleGames = [
-    { title: "Doom Eternal", img: "images/doom.jpg", price: "$59.99" },
-    { title: "Skyrim", img: "images/skyrim.jpg", price: "$39.99" },
-    { title: "The Witcher 3", img: "images/thewitcher3.jpg", price: "$49.99" }
-  ];
 
-  // Загружаем корзину из localStorage или добавляем sampleGames
-  let cart = JSON.parse(localStorage.getItem('cart')) || sampleGames;
+
+<script>
+  let cart = JSON.parse(localStorage.getItem('cart')) || [];
   const cartContainer = document.getElementById('cartGames');
+  const checkoutBtn = document.getElementById('checkoutBtn');
+  const checkoutMsg = document.getElementById('checkoutMsg');
+  const cartCount = document.getElementById('cartCount');
 
   function renderCart() {
     cartContainer.innerHTML = '';
@@ -98,11 +109,12 @@
     cart.forEach((game, index) => {
       const card = document.createElement('div');
       card.className = 'game-card';
+      const priceText = game.price != null ? `${Number(game.price).toFixed(2)}$` : '';
       card.innerHTML = `
         <img src="${game.img}" alt="${game.title}">
         <div class="game-info">
           <h5>${game.title}</h5>
-          <p>${game.price}</p>
+          <p>${priceText}</p>
         </div>
         <button class="btn btn-remove" onclick="removeFromCart(${index})">Remove</button>
       `;
@@ -114,61 +126,75 @@
     cart.splice(index, 1);
     localStorage.setItem('cart', JSON.stringify(cart));
     renderCart();
+    updateCartCount();
   }
 
-  renderCart();
+  function updateCartCount() {
+    cartCount.textContent = cart.length;
+  }
 
-  const playedGamesData = [
-  { title: "Doom Eternal", img: "images/doom.jpg", hoursPlayed: 120, lastPlayed: "2025-11-01" },
-  { title: "Skyrim", img: "images/skyrim.jpg", hoursPlayed: 300, lastPlayed: "2025-10-25" },
-  { title: "The Witcher 3", img: "images/thewitcher3.jpg", hoursPlayed: 210, lastPlayed: "2025-10-28" }
-];
+  async function checkout() {
+    checkoutMsg.textContent = '';
+    checkoutMsg.className = 'mt-3';
 
-const playedContainer = document.getElementById('playedGames');
+    const token = localStorage.getItem('token');
+    const user = JSON.parse(localStorage.getItem('user') || 'null');
+    if (!token || !user?.email) {
+      checkoutMsg.textContent = 'Please login first.';
+      checkoutMsg.classList.add('text-danger');
+      return;
+    }
 
-function renderPlayedGames() {
-  playedContainer.innerHTML = '';
-  const now = new Date();
+    if (cart.length === 0) {
+      checkoutMsg.textContent = 'Cart is empty.';
+      checkoutMsg.classList.add('text-danger');
+      return;
+    }
 
-  playedGamesData.forEach(game => {
-    const lastPlayedDate = new Date(game.lastPlayed);
-    const diffDays = Math.floor((now - lastPlayedDate) / (1000 * 60 * 60 * 24));
+    const orderResults = await Promise.allSettled(
+      cart.map((game) =>
+        fetch('/api/orders', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            Authorization: `Bearer ${token}`
+          },
+          body: JSON.stringify({ game_id: game._id })
+        })
+      )
+    );
 
-    const card = document.createElement('div');
-    card.className = 'game-card';
-    card.innerHTML = `
-      <img src="${game.img}" alt="${game.title}">
-      <div class="game-info">
-        <h5>${game.title}</h5>
-        <p>Hours Played: ${game.hoursPlayed} | Last Played: ${diffDays} days ago</p>
-      </div>
-    `;
-    playedContainer.appendChild(card);
-  });
-}
+    const failed = orderResults.some((r) => r.status === 'rejected' || (r.value && !r.value.ok));
+    if (failed) {
+      checkoutMsg.textContent = 'Order failed. Try again.';
+      checkoutMsg.classList.add('text-danger');
+      return;
+    }
 
-renderPlayedGames();
+    const titles = cart.map((g) => g.title).join(', ');
+    try {
+      const orderId = `${Date.now()}`;
+      await emailjs.send('service_yjk1gme', 'template_swny45e', {
+        order_id: orderId,
+        email: user.email
+      });
+    } catch {
+      // email failure shouldn't block purchase
+    }
 
-// === Обновление значка корзины ===
-const cartCount = document.getElementById('cartCount');
+    cart = [];
+    localStorage.setItem('cart', JSON.stringify(cart));
+    renderCart();
+    updateCartCount();
+    checkoutMsg.textContent = 'Order placed.';
+    checkoutMsg.classList.add('text-success');
+  }
 
-function updateCartCount() {
-  cartCount.textContent = cart.length;
-}
-
-// Вызываем при загрузке
-updateCartCount();
-
-// При удалении из корзины обновляем тоже
-function removeFromCart(index) {
-  cart.splice(index, 1);
-  localStorage.setItem('cart', JSON.stringify(cart));
+  checkoutBtn.addEventListener('click', checkout);
   renderCart();
   updateCartCount();
-}
-
-
 </script>
 
 </body>
 </html>
+
