--- a/public/index.html
+++ b/public/index.html
@@ -144,6 +144,12 @@
 
         </div>
 
+        <div class="d-flex align-items-center me-3" id="accountInfo" style="display: none;">
+          <span class="small me-2" id="accountEmail"></span>
+          <span class="badge bg-secondary" id="accountRole"></span>
+        </div>
+        <button class="btn btn-outline-light me-2" id="logoutBtn" style="display: none;">Logout</button>
+        <button class="btn btn-outline-light me-3" id="authOpenBtn" data-bs-toggle="modal" data-bs-target="#authModal">Register</button>
         <a href="cart.html" class="text-white position-relative">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cart"
             viewBox="0 0 16 16">
@@ -184,6 +190,27 @@
         </div>
       </div>
       
+
+      <div id="adminPanel" class="bg-dark text-white p-4 rounded mb-4" style="display: none;" data-aos="fade-up">
+        <h4 class="mb-3">Admin Panel</h4>
+        <form id="adminAddGameForm" class="row g-3">
+          <div class="col-md-4">
+            <label class="form-label">Title</label>
+            <input type="text" class="form-control" id="adminGameTitle" required>
+          </div>
+          <div class="col-md-2">
+            <label class="form-label">Price</label>
+            <input type="number" class="form-control" id="adminGamePrice" min="0" step="0.01" required>
+          </div>
+          <div class="col-md-6">
+            <label class="form-label">Description</label>
+            <input type="text" class="form-control" id="adminGameDescription" required>
+          </div>
+          <div class="col-12 d-flex justify-content-end">
+            <button type="submit" class="btn btn-primary">Add Game</button>
+          </div>
+        </form>
+      </div>
 
       <h2 class="text-white mt-5 mb-4" data-aos="fade-up">Featured Games</h2>
       <div class="row g-4" id="featuredGames" data-aos="fade-up">
@@ -270,7 +297,37 @@
     <p>© 2025 Atera — All rights reserved.</p>
   </footer>
 
+  <div class="modal fade" id="authModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content bg-dark text-white">
+        <div class="modal-header">
+          <h5 class="modal-title" id="authModalTitle">Register</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="d-flex gap-2 mb-3">
+            <button type="button" class="btn btn-outline-light btn-sm" id="authModeRegister">Register</button>
+            <button type="button" class="btn btn-outline-light btn-sm" id="authModeLogin">Login</button>
+          </div>
+          <div id="authMessage" class="small mb-2"></div>
+          <form id="authForm">
+            <div class="mb-3">
+              <label class="form-label">Email</label>
+              <input type="email" class="form-control" id="authEmail" required>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Password</label>
+              <input type="password" class="form-control" id="authPassword" required>
+            </div>
+            <button type="submit" class="btn btn-primary w-100" id="authSubmit">Create account</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/auth.js"></script>
 
   <script>
     let lastScrollTop = 0;
